src/app/login/login.page.scss
ion-content.background{
    --background:url(../../assets/images/ab.jpg) 0 0/100% 100% no-repeat;
  }

  .content{
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    height: 100%;
  }

  .cont-1{
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    margin-left: 15px;
    margin-right: 20px;
    margin-top: 60px;
  }

  .cont-2{
    display: flex;
    flex-direction: column;
    margin-left: 15px;
    margin-right: 20px;
  }

  .cont-3{
    display: flex;
    flex-direction: column;
    margin-left: 15px;
    margin-right: 20px;
  }

  .forgot{
    display: flex;
    justify-content: flex-end;
    margin-left: 15px;
    margin-right: 20px;
    margin-top: 15px;
  }

  .box-2{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    margin-top: 20px;
  }

  .signin{
    display: flex;
    margin-left: 15px;
    margin-right: 20px;
    padding-top: 10px;
  }

  .icon{
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    margin-right: 10px;
  }

  .box-3{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
  }

  .signup-right{
    display: flex;
    margin-left: 15px;
    margin-right: 20px;
    padding-top: 10px;
  }

  ion-item{
    --background: #F8EEEC;
}

  ion-icon{
      --background: #E96D37;
  }

  span{
      border-bottom: 1px solid  rgb(166,158,156);
      line-height: 10px;
      padding-bottom: 3px;
      padding-left: 0px;
      padding-right: 0px;
  }

  a{
    list-style-type: none;
    text-decoration: none;
    color: rgb(4,0,0);
  }

